--- a/weavy/package.json
+++ b/weavy/package.json
@@ -11,6 +11,7 @@
     "dev:all": "mprocs"
   },
   "dependencies": {
+    "@ai-sdk/google": "^3.0.1",
     "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "6.16.3",
     "@radix-ui/react-accordion": "^1.2.12",
@@ -43,6 +44,7 @@
     "@trpc/client": "^11.8.1",
     "@trpc/server": "^11.8.1",
     "@trpc/tanstack-react-query": "^11.8.1",
+    "ai": "^6.0.3",
     "better-auth": "^1.4.9",
     "class-variance-authority": "^0.7.1",
     "client-only": "^0.0.1",
