--- a/weavy/package.json
+++ b/weavy/package.json
@@ -57,9 +57,11 @@
     "lucide-react": "^0.562.0",
     "next": "15.5.4",
     "next-themes": "^0.4.6",
+    "random-word-slugs": "^0.1.7",
     "react": "19.1.0",
     "react-day-picker": "^9.13.0",
     "react-dom": "19.1.0",
+    "react-error-boundary": "^6.0.1",
     "react-hook-form": "^7.69.0",
     "react-resizable-panels": "^4.1.0",
     "recharts": "2.15.4",
