--- a/weavy/package.json
+++ b/weavy/package.json
@@ -44,6 +44,7 @@
     "@trpc/client": "^11.8.1",
     "@trpc/server": "^11.8.1",
     "@trpc/tanstack-react-query": "^11.8.1",
+    "@xyflow/react": "^12.10.0",
     "ai": "^6.0.3",
     "better-auth": "^1.4.9",
     "class-variance-authority": "^0.7.1",
