--- a/weavy/package.json
+++ b/weavy/package.json
@@ -56,6 +56,7 @@
     "embla-carousel-react": "^8.6.0",
     "inngest": "3.44.1",
     "input-otp": "^1.4.2",
+    "jotai": "^2.16.1",
     "lucide-react": "^0.562.0",
     "next": "15.5.4",
     "next-themes": "^0.4.6",
