--- a/weavy/package.json
+++ b/weavy/package.json
@@ -45,6 +45,7 @@
     "@trpc/client": "^11.8.1",
     "@trpc/server": "^11.8.1",
     "@trpc/tanstack-react-query": "^11.8.1",
+    "@types/toposort": "^2.0.7",
     "@xyflow/react": "^12.10.0",
     "ai": "^6.0.3",
     "better-auth": "^1.4.9",
@@ -73,6 +74,7 @@
     "sonner": "^2.0.7",
     "superjson": "^2.2.6",
     "tailwind-merge": "^3.4.0",
+    "toposort": "^2.0.2",
     "vaul": "^1.1.2",
     "zod": "^4.2.1"
   },
