--- a/weavy/package.json
+++ b/weavy/package.json
@@ -71,6 +71,7 @@
     "sonner": "^2.0.7",
     "superjson": "^2.2.6",
     "tailwind-merge": "^3.4.0",
+    "toposort": "^2.0.2",
     "vaul": "^1.1.2",
     "zod": "^4.2.1"
   },
@@ -80,6 +81,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/toposort": "^2.0.7",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
     "inngest-cli": "^1.15.3",
