--- a/weavy/package.json
+++ b/weavy/package.json
@@ -53,6 +53,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "handlebars": "^4.7.8",
     "inngest": "3.44.1",
     "input-otp": "^1.4.2",
     "ky": "^1.14.2",
