--- a/weavy/package.json
+++ b/weavy/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@ai-sdk/google": "^3.0.1",
     "@hookform/resolvers": "^5.2.2",
+    "@inngest/realtime": "0.4.4",
     "@prisma/client": "6.16.3",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
