--- a/weavy/package.json
+++ b/weavy/package.json
@@ -15,6 +15,7 @@
     "@ai-sdk/google": "^3.0.1",
     "@hookform/resolvers": "^5.2.2",
     "@inngest/realtime": "0.4.4",
+    "@openrouter/ai-sdk-provider": "^1.5.4",
     "@paralleldrive/cuid2": "^3.0.6",
     "@prisma/client": "6.16.3",
     "@radix-ui/react-accordion": "^1.2.12",
