--- a/weavy/package.json
+++ b/weavy/package.json
@@ -87,17 +87,21 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@testing-library/react": "^16.3.1",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/toposort": "^2.0.7",
+    "@vitejs/plugin-react": "^5.1.2",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
     "inngest-cli": "^1.15.3",
+    "jsdom": "^27.4.0",
     "prisma": "6.16.3",
     "tailwindcss": "^4",
     "tsx": "4.20.6",
     "tw-animate-css": "^1.4.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^4.0.16"
   }
 }
